--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "deep-eql",
+  "name": "tolerant-deep-eql",
   "version": "0.1.3",
   "description": "Improved deep equality testing for Node.js and the browser.",
   "author": "Jake Luer <jake@alogicalparadox.com>",
